# jengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
data/: entities  map
src/: collision.h  collision_system.cpp  collision_system.h  damage.cpp  damage.h  direction.cpp  direction.h  engine.cpp  engine.h  entity.cpp  entity.h  game_objects.cpp  game_objects.h  health.cpp  health.h  health_system.h  life_time.h  life_time_system.h  main.cpp  movement_system.cpp  movement_system.h  render_system.h  shape.h  system.cpp  system.h  texture.h  texture_manager.h  velocity.h
src/components/: CMakeLists.txt  audio.cpp  audio.h  collision.cpp  collision.h  damage.cpp  damage.h  health.cpp  health.h  life_time.cpp  life_time.h  physics_body.cpp  physics_body.h  shape.cpp  shape.h  texture.cpp  texture.h  velocity.cpp  velocity.h
src/core/: CMakeLists.txt  component.h  engine.cpp  engine.h  entity.cpp  entity.h  game_objects.cpp  game_objects.h  globals.cpp  globals.h  level.cpp  level.h  system.cpp  system.h
src/ecs/: CMakeLists.txt  component_manager.cpp  component_manager.h  component_manager.hpp  components.hpp  entity_manager.cpp  entity_manager.h
src/systems/: CMakeLists.txt  audio_system.cpp  audio_system.h  collision_system.cpp  collision_system.h  health_system.cpp  health_system.h  input_system.cpp  input_system.h  life_time_system.cpp  life_time_system.h  movement_system.cpp  movement_system.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h
